<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="ContentDescription, Autofill">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/ic_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/emailEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <ImageView
        android:id="@+id/emailImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/emailEdit"
        app:layout_constraintEnd_toStartOf="@id/emailEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailEdit" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gray"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        app:layout_constraintStart_toEndOf="@+id/emailImage"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <ImageView
        android:id="@+id/usernameImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@+id/usernameEdit"
        app:layout_constraintEnd_toStartOf="@id/usernameEdit"
        app:layout_constraintStart_toStartOf="@+id/emailImage"
        app:layout_constraintTop_toTopOf="@+id/usernameEdit" />

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/username_hint"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/emailEdit"
        app:layout_constraintStart_toEndOf="@+id/emailImage"
        app:layout_constraintTop_toBottomOf="@id/emailEdit" />

    <ImageView
        android:id="@+id/passwordImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_user_password"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEdit"
        app:layout_constraintEnd_toStartOf="@id/passwordEdit"
        app:layout_constraintStart_toStartOf="@+id/usernameImage"
        app:layout_constraintTop_toBottomOf="@+id/usernameEdit" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/usernameEdit"
        app:layout_constraintTop_toBottomOf="@id/usernameEdit" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        tools:text="Пустые поля" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:alpha="0.9"
        android:backgroundTint="@color/black"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit" />

    <TextView
        android:id="@+id/hasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/has_account_button"
        android:textColor="@color/auth_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>